# techgurus

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
shout_api/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  youtube_cred.json
shout_api/core/: admin.py  models.py  permissions.py  signals.py  urls.py
shout_api/core/management/commands/: publish_schedule_content.py  setup_roles.py
shout_api/core/migrations/: 0001_initial.py
shout_api/core/serializers/: contents.py  users.py
shout_api/core/services/: twitter_client.py  uploader_service.py  youtube_client.py  youtube_creds.json
shout_api/core/views/: contents.py  users.py
shout_api/postify_app/: admin.py  apps.py  models.py  v1_apis.py  v1_serialzers.py  v1_views.py
shout_api/postify_app/migrations/: 0001_initial.py  0002_contentplatform_upload_status_and_more.py  0002_db_models.py
shout_api/postify_app/services/: twitter_utils.py  uploader_service.py  youtube_client.py
shout_api/shout_api/: asgi.py  settings.py  urls.py  wsgi.py
shout_ui/shout_ui/: .env  .gitignore  package-lock.json  package.json
shout_ui/shout_ui/src/: App.js  constants.js  routes.jsx
shout_ui/shout_ui/src/components/: Navbar.jsx
shout_ui/shout_ui/src/context/: index.jsx
shout_ui/shout_ui/src/layouts/: dashboard.jsx
shout_ui/shout_ui/src/pages/Dashboard/: ContentDrawer.jsx  content.jsx
shout_ui/shout_ui/src/widgets/layout/: sidenav.jsx
